# webmsnp

./: README.md  build-release.ps1  build-release.sh
server/: Cargo.toml
server/static/: saurik.css
