[package]
name = "imsnp"
version = "1.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.1", features = ["ws"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.141"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3.31"
base64 = "0.22.1"
uuid = { version = "1.11.0", features = ["v4"] }
msnp11-sdk = "0.12.1"
